--- a/app/src/main/res/layout/fragment_profile_feedback.xml
+++ b/app/src/main/res/layout/fragment_profile_feedback.xml
@@ -36,7 +36,7 @@
         android:background="@color/myDrawerBackground"
         >
 
-        <TextView
+        <Model.CustomTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -44,6 +44,7 @@
             android:textSize="24sp"
             android:layout_gravity="center"
             android:layout_marginBottom="16dp"
+            style="@style/OpenSansRegular"
             />
     </LinearLayout>
 
