--- a/app/src/main/res/layout/myoffers_pager_1.xml
+++ b/app/src/main/res/layout/myoffers_pager_1.xml
@@ -25,10 +25,6 @@
     </android.support.v4.widget.SwipeRefreshLayout>
 
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
     <LinearLayout
         android:id="@+id/myoffers_received_emptyView"
         android:orientation="vertical"
@@ -41,7 +37,7 @@
         android:background="@color/myDrawerBackground"
         >
 
-        <TextView
+        <Model.CustomTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -49,9 +45,9 @@
             android:textSize="24sp"
             android:layout_gravity="center"
             android:layout_marginBottom="16dp"
+            style="@style/OpenSansRegular"
             />
     </LinearLayout>
-    </ScrollView>
 
 
 </LinearLayout>
