--- a/app/src/main/res/layout/myoffers_pager_2.xml
+++ b/app/src/main/res/layout/myoffers_pager_2.xml
@@ -35,7 +35,8 @@
         android:background="@color/myDrawerBackground"
         >
 
-        <TextView
+        <Model.CustomTextView
+            style="@style/OpenSansRegular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
