--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -63,7 +63,7 @@
                     android:clickable="true"
                     />
 
-                <EditText
+                <Model.CustomEditText
                     android:id="@+id/send_msg"
                     android:layout_toRightOf="@+id/attach_btn"
                     android:layout_toLeftOf="@+id/send_btn"
@@ -77,13 +77,14 @@
                     android:imeOptions="actionSend"
                     />
 
-                <Button
+                <Model.CustomButton
                     android:id="@+id/send_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/send"
                     android:layout_alignParentRight="true"
                     android:layout_alignBottom="@id/send_msg"
+                    style="@style/OpenSansRegular"
                      />
             </RelativeLayout>
 
@@ -160,14 +161,4 @@
          The drawer is given a fixed width in dp and extends the full height of
          the container.
     -->
-
-    <fragment
-        android:id="@+id/navigation_drawer"
-        android:layout_width="@dimen/navigation_drawer_width"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        tools:layout="@layout/fragment_navigation_drawer_old"
-        class ="com.sinapp.sharathsind.tradepost.NavigationDrawerFragmentOld"
-        />
-
 </android.support.v4.widget.DrawerLayout>
