--- a/app/src/main/res/layout/activity_first_time.xml
+++ b/app/src/main/res/layout/activity_first_time.xml
@@ -68,7 +68,8 @@
         style="@style/OpenSansRegular"
         />
 
-    <Button
+    <Model.CustomButton
+        style="@style/OpenSansLight"
         android:id="@+id/sign_in_button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
