--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -33,7 +33,7 @@
         android:gravity="center"
         >
 
-        <TextView
+        <Model.CustomTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -41,6 +41,7 @@
             android:textSize="24sp"
             android:layout_gravity="center"
             android:layout_marginBottom="16dp"
+            style="@style/OpenSansRegular"
             />
     </LinearLayout>
 
