--- a/app/src/main/res/menu/chat_popup_menu.xml
+++ b/app/src/main/res/menu/chat_popup_menu.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     >
 
     <item
         android:id="@+id/item_photo_camera"
-        android:showAsAction="ifRoom|withText"
+        app:showAsAction="ifRoom|withText"
         android:title="Take Photo"
-
+        android:icon="@drawable/ic_folder"
         android:visible="true"/>
     <item
         android:id="@+id/item_photo_gallery"
-        android:showAsAction="ifRoom|withText"
-        android:title="Pick Photo"
+        app:showAsAction="ifRoom|withText"
+        android:title="Choose Photo"
+        android:icon="@drawable/ic_camera"
         android:visible="true"/>
 
     <item
         android:id="@+id/item_cancel"
-        android:showAsAction="ifRoom|withText"
+        app:showAsAction="ifRoom|withText"
         android:title="Cancel Deal"
+        android:icon="@drawable/ic_cross"
         android:visible="true"/>
 
 </menu>
