update: added EditActivity (the image part still need to be complete)

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,7 @@
         <style name="ActionBarTheme" parent="style/ThemeOverlay.AppCompat.Light">
         <!-- THIS is where you can color the arrow! -->
             <item name="colorControlNormal">@color/white</item>
+            <item name="android:textColorPrimary">@color/white</item>
         </style>
 
         <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
