--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -30,6 +30,7 @@
             />
 
         <Preference android:title="Sign Out"
+            android:key="Sign Out"
             android:selectable="true"/>
 
 
