--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -22,6 +22,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_below="@+id/tool_bar"
+        android:divider="@null"
+        android:dividerHeight="0dp"
         />
 
     <View
