--- a/app/src/main/res/layout/header_chat.xml
+++ b/app/src/main/res/layout/header_chat.xml
@@ -52,6 +52,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginBottom="16dp"
         android:gravity="center"
+        android:visibility="gone"
         >
 
         <de.hdodenhof.circleimageview.CircleImageView
